--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"
+    />
+
     <title>Login | App</title>
   </head>
   <body class="flex items-center justify-center w-screen h-screen m-auto">
@@ -36,7 +47,7 @@
           >
             <div class="justify-start">
               <span class="text-black text-base font-normal font-['Epilogue']"
-                >CPF/CNPJ </span
+                >E-mail </span
               ><span
                 class="text-red-700 text-base font-normal font-['Epilogue']"
                 >*</span
@@ -99,10 +110,8 @@
             >
               Entrar com E-mail
             </div>
-            <div class="w-4 h-4 relative overflow-hidden">
-              <div
-                class="w-2 h-2 left-[3.50px] top-[3.50px] absolute bg-white"
-              ></div>
+            <div class="w-8 h-8 relative overflow-hidden">
+              <i class="w-8 h-8 ph ph-arrow-up-right text-white"></i>
             </div>
           </button>
           <button
