adicionar seção de contato com link "Fale conosco" no rodapé

--- a/index.html
+++ b/index.html
@@ -125,6 +125,19 @@
           </button>
         </div>
       </div>
+
+      <div
+        class="self-stretch py-6 border-t border-zinc-100 inline-flex justify-center items-center gap-2.5"
+      >
+        <div class="justify-start">
+          <span class="text-black text-base font-medium font-['Epilogue']"
+            >Tem alguma duvida? </span
+          ><span
+            class="text-black text-base font-medium font-['Epilogue'] underline"
+            >Fale conosco</span
+          >
+        </div>
+      </div>
     </div>
   </body>
 </html>
