adicionar página de recuperação de senha e ajustar estilo do formulário de login

--- a/recover-password.html
+++ b/recover-password.html
@@ -32,11 +32,11 @@
       <div class="w-64 pt-14 inline-flex justify-between items-start">
         <div class="w-64 justify-start">
           <span class="text-black text-3xl font-medium font-['Epilogue']"
-            >Login<br /></span
+            >Recuperação<br /></span
           ><span class="text-black text-lg font-normal font-['Epilogue']"
             ><br /></span
           ><span class="text-neutral-400 text-lg font-normal font-['Epilogue']"
-            >Para acessar o sistema, insira  seus dados de acesso.</span
+            >Para recuperar sua senha, insira seu e-mail.</span
           >
         </div>
       </div>
@@ -72,27 +72,6 @@
             class="self-stretch flex flex-col justify-start items-start gap-2.5"
           >
             <div
-              class="self-stretch inline-flex justify-start items-start gap-2.5"
-            >
-              <div class="justify-start">
-                <span class="text-black text-base font-normal font-['Epilogue']"
-                  >Senha</span
-                ><span
-                  class="text-red-700 text-base font-normal font-['Epilogue']"
-                  >*</span
-                >
-              </div>
-            </div>
-            <div
-              class="self-stretch px-5 py-4 relative rounded-2xl outline outline-1 outline-offset-[-1px] outline-zinc-300 inline-flex justify-start items-center"
-            >
-              <input
-                type="password"
-                class="w-full text-neutral-400 text-base font-normal font-['Epilogue']"
-                placeholder="************"
-              />
-            </div>
-            <div
               class="self-stretch justify-start text-neutral-400 text-sm font-normal font-['Epilogue']"
             >
               Informe uma senha de 8 caracteres ou mais para acessar o sistema.
@@ -108,7 +87,7 @@
             <div
               class="justify-start text-white text-xl font-medium font-['Epilogue']"
             >
-              Entrar com E-mail
+              Recuperar senha
             </div>
             <div class="w-8 h-8 relative overflow-hidden">
               <i class="w-8 h-8 ph ph-arrow-up-right text-white"></i>
@@ -120,7 +99,7 @@
             <div
               class="justify-start text-black text-xl font-medium font-['Epilogue']"
             >
-              Esqueci minha senha
+              Voltar
             </div>
           </button>
         </div>
