feat: linka as páginas

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div
               class="justify-start text-white text-xl font-medium font-['Epilogue']"
             >
-              Entrar com E-mail
+              Entrar
             </div>
             <div class="w-8 h-8 relative overflow-hidden">
               <i class="w-8 h-8 ph ph-arrow-up-right text-white"></i>
@@ -117,11 +117,11 @@
           <button
             class="cursor-pointer self-stretch px-5 py-4 rounded-2xl outline outline-1 outline-offset-[-1px] outline-zinc-300 inline-flex justify-center items-center"
           >
-            <div
+            <a href="recover-password.html"
               class="justify-start text-black text-xl font-medium font-['Epilogue']"
             >
               Esqueci minha senha
-            </div>
+            </a>
           </button>
         </div>
       </div>
