--- a/recover-password.html
+++ b/recover-password.html
@@ -96,11 +96,11 @@
           <button
             class="cursor-pointer self-stretch px-5 py-4 rounded-2xl outline outline-1 outline-offset-[-1px] outline-zinc-300 inline-flex justify-center items-center"
           >
-            <div
+            <a href="index.html"
               class="justify-start text-black text-xl font-medium font-['Epilogue']"
             >
               Voltar
-            </div>
+            </a>
           </button>
         </div>
       </div>
