--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
           <button
             class="cursor-pointer self-stretch px-8 py-4 bg-black rounded-2xl inline-flex justify-between items-center"
           >
-            <div
+            <a href="home.html"
               class="justify-start text-white text-xl font-medium font-['Epilogue']"
             >
               Entrar
-            </div>
+            </a>
             <div class="w-8 h-8 relative overflow-hidden">
               <i class="w-8 h-8 ph ph-arrow-up-right text-white"></i>
             </div>
