--- a/family-form.html
+++ b/family-form.html
@@ -237,11 +237,11 @@
             <div
               class="self-stretch px-8 py-4 bg-black rounded-2xl inline-flex justify-between items-center"
             >
-              <div
+              <a href="family.html"
                 class="justify-start text-white text-xl font-medium font-['Epilogue']"
               >
                 Finalizar cadastro
-              </div>
+              </a>
               <div class="w-4 h-4 relative overflow-hidden">
                 <div
                   class="w-2 h-2 left-[3.50px] top-[3.50px] absolute bg-white"
@@ -251,11 +251,11 @@
             <div
               class="self-stretch px-5 py-4 rounded-2xl outline outline-1 outline-offset-[-1px] outline-zinc-300 inline-flex justify-center items-center"
             >
-              <div
+              <a href="family.html"
                 class="justify-start text-black text-xl font-medium font-['Epilogue']"
               >
                 Voltar
-              </div>
+              </a>
             </div>
           </div>
         </div>
