--- a/family.html
+++ b/family.html
@@ -110,11 +110,11 @@
             <div
               class="self-stretch px-5 py-4 bg-black rounded-2xl inline-flex justify-center items-center gap-2.5"
             >
-              <div
+              <a href="family-form.html"
                 class="justify-start text-white text-base font-semibold font-['Epilogue']"
               >
                 Adicionar familiar
-              </div>
+          </a>
             </div>
           </div>
           <div
@@ -238,11 +238,11 @@
                 class="w-7 h-6 left-[0.94px] top-[2.81px] absolute bg-black"
               ></div>
             </div>
-            <div
+            <a href="home.html"
               class="justify-start text-black text-sm font-medium font-['Epilogue']"
             >
               Inicio
-            </div>
+          </a>
           </div>
           <div
             class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
@@ -252,11 +252,11 @@
                 class="w-6 h-6 left-[3.75px] top-[1.88px] absolute bg-black"
               ></div>
             </div>
-            <div
+            <a href="#"
               class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
             >
               Atividades
-            </div>
+          </a>
           </div>
           <div
             class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
@@ -266,11 +266,11 @@
                 class="w-6 h-6 left-[3.75px] top-[1.88px] absolute bg-black"
               ></div>
             </div>
-            <div
+            <a href="#"
               class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
             >
               Relax
-            </div>
+          </a>
           </div>
           <div
             class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
@@ -280,11 +280,11 @@
                 class="w-6 h-6 left-[2.81px] top-[2.81px] absolute bg-black"
               ></div>
             </div>
-            <div
+            <a href="sos.html"
               class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
             >
               Emergência
-            </div>
+          </a>
           </div>
         </div>
       </div>
