--- a/home.html
+++ b/home.html
@@ -76,11 +76,11 @@
             <div
               class="w-36 px-5 py-4 bg-black rounded-2xl flex justify-center items-center gap-2.5"
             >
-              <div
+              <a href="suport.html"
                 class="justify-start text-white text-base font-semibold font-['Epilogue']"
               >
                 Editar perfil
-              </div>
+              </a>
             </div>
           </div>
           <div
@@ -100,11 +100,11 @@
               A
             </div>
           </div>
-          <div
+          <a href="family.html"
             class="justify-start text-black text-2xl font-medium font-['Epilogue']"
           >
             Familiares
-          </div>
+        </a>
           <div class="w-28 h-9 flex justify-start items-start">
             <div class="flex justify-start items-start">
               <img
@@ -275,11 +275,11 @@
               class="w-7 h-6 left-[0.94px] top-[2.81px] absolute bg-black"
             ></div>
           </div>
-          <div
+          <a href="home.html"
             class="justify-start text-black text-sm font-medium font-['Epilogue']"
           >
             Inicio
-          </div>
+        </a>
         </div>
         <div
           class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
@@ -289,11 +289,11 @@
               class="w-6 h-6 left-[3.75px] top-[1.88px] absolute bg-black"
             ></div>
           </div>
-          <div
+          <a href="#"
             class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
           >
             Atividades
-          </div>
+        </a>
         </div>
         <div
           class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
@@ -303,11 +303,11 @@
               class="w-6 h-6 left-[3.75px] top-[1.88px] absolute bg-black"
             ></div>
           </div>
-          <div
+          <a href="#"
             class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
           >
             Relax
-          </div>
+        </a>
         </div>
         <div
           class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
@@ -317,11 +317,11 @@
               class="w-6 h-6 left-[2.81px] top-[2.81px] absolute bg-black"
             ></div>
           </div>
-          <div
+          <a href="sos.html"
             class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
           >
             Emergência
-          </div>
+        </a>
         </div>
       </div>
     </div>
