--- a/new-password.html
+++ b/new-password.html
@@ -105,11 +105,11 @@
           <button
             class="cursor-pointer self-stretch px-8 py-4 bg-black rounded-2xl inline-flex justify-between items-center"
           >
-            <div
+            <a href="success-message.html"
               class="justify-start text-white text-xl font-medium font-['Epilogue']"
             >
               Recuperar senha
-            </div>
+            </a>
             <div class="w-8 h-8 relative overflow-hidden">
               <i class="w-8 h-8 ph ph-arrow-up-right text-white"></i>
             </div>
@@ -117,11 +117,11 @@
           <button
             class="cursor-pointer self-stretch px-5 py-4 rounded-2xl outline outline-1 outline-offset-[-1px] outline-zinc-300 inline-flex justify-center items-center"
           >
-            <div
+            <a href="index.html"
               class="justify-start text-black text-xl font-medium font-['Epilogue']"
             >
               Voltar
-            </div>
+            </a>
           </button>
         </div>
       </div>
