--- a/recover-password.html
+++ b/recover-password.html
@@ -84,11 +84,11 @@
           <button
             class="cursor-pointer self-stretch px-8 py-4 bg-black rounded-2xl inline-flex justify-between items-center"
           >
-            <div
+            <a href="message.html"
               class="justify-start text-white text-xl font-medium font-['Epilogue']"
             >
               Recuperar senha
-            </div>
+            </a>
             <div class="w-8 h-8 relative overflow-hidden">
               <i class="w-8 h-8 ph ph-arrow-up-right text-white"></i>
             </div>
