--- a/sos.html
+++ b/sos.html
@@ -150,11 +150,11 @@
               class="w-7 h-6 left-[0.94px] top-[2.81px] absolute bg-black"
             ></div>
           </div>
-          <div
+          <a href="home.html"
             class="justify-start text-black text-sm font-medium font-['Epilogue']"
           >
             Inicio
-          </div>
+          </a>
         </div>
         <div
           class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
@@ -192,11 +192,11 @@
               class="w-6 h-6 left-[2.81px] top-[2.81px] absolute bg-black"
             ></div>
           </div>
-          <div
+          <a href="sos.html"
             class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
           >
             Emergência
-          </div>
+          </a>
         </div>
       </div>
     </div>
