--- a/suport.html
+++ b/suport.html
@@ -171,11 +171,11 @@
               class="self-stretch py-5 bg-white inline-flex justify-between items-center overflow-hidden"
             >
               <div class="flex justify-start items-center gap-2.5">
-                <div
+                <a href="config.html"
                   class="justify-center text-stone-900 text-xl font-normal font-['Epilogue']"
                 >
                   Configurar
-                </div>
+                </a>
                 <div class="w-6 h-6 relative overflow-hidden">
                   <div
                     class="w-1.5 h-1.5 left-[9px] top-[9px] absolute outline outline-2 outline-offset-[-1px] outline-stone-900"
@@ -196,11 +196,11 @@
         <div
           class="self-stretch px-8 py-4 bg-black rounded-2xl inline-flex justify-between items-center"
         >
-          <div
+          <a href="index.html"
             class="justify-start text-white text-xl font-medium font-['Epilogue']"
           >
             Sair do aplicativo
-          </div>
+          </a>
           <div class="w-4 h-4 relative overflow-hidden">
             <div
               class="w-2 h-2 left-[3.50px] top-[3.50px] absolute bg-white"
