--- a/config.html
+++ b/config.html
@@ -110,11 +110,11 @@
         <div
           class="self-stretch px-5 py-4 rounded-2xl outline outline-1 outline-offset-[-1px] outline-zinc-300 inline-flex justify-center items-center"
         >
-          <div
+          <a href="suport.html"
             class="justify-start text-black text-xl font-medium font-['Epilogue']"
           >
             Voltar
-          </div>
+          </a>
         </div>
       </div>
     </div>
