--- a/message.html
+++ b/message.html
@@ -37,7 +37,7 @@
         >
           Um E-mail foi enviado para <br />guil***0@gmail.com
         </div>
-        <div
+        <a href="index.html"
           class="self-stretch flex flex-col justify-start items-start gap-2.5"
         >
           <button
@@ -49,7 +49,7 @@
               Voltar ao início
             </div>
           </button>
-        </div>
+        </a>
       </div>
 
       <div
