--- a/success-message.html
+++ b/success-message.html
@@ -43,11 +43,11 @@
           <button
             class="bg-black cursor-pointer self-stretch px-5 py-4 rounded-2xl outline outline-1 outline-offset-[-1px] outline-zinc-300 inline-flex justify-center items-center"
           >
-            <div
+            <a href="index.html"
               class="justify-start text-white text-xl font-medium font-['Epilogue']"
             >
               Começar
-            </div>
+            </a>
           </button>
         </div>
       </div>
