feat: add icons

--- a/family-form.html
+++ b/family-form.html
@@ -40,7 +40,7 @@
               ><br /></span
             ><span
               class="text-neutral-400 text-lg font-normal font-['Epilogue']"
-              >Para acessar o sistema, insira  seus dados de acesso.</span
+              >Para acessar o sistema, insira seus dados de acesso.</span
             >
           </div>
         </div>
@@ -242,11 +242,7 @@
               >
                 Finalizar cadastro
               </a>
-              <div class="w-4 h-4 relative overflow-hidden">
-                <div
-                  class="w-2 h-2 left-[3.50px] top-[3.50px] absolute bg-white"
-                ></div>
-              </div>
+              <i class="ph ph-user-check text-2xl text-white"></i>
             </div>
             <div
               class="self-stretch px-5 py-4 rounded-2xl outline outline-1 outline-offset-[-1px] outline-zinc-300 inline-flex justify-center items-center"
