--- a/sos.html
+++ b/sos.html
@@ -124,18 +124,14 @@
         </div>
         <div class="self-stretch h-16 relative bg-black rounded-[64px]">
           <div
-            class="h-14 px-5 py-2.5 left-[10px] top-[7px] absolute bg-zinc-500 rounded-[32px] inline-flex justify-center items-center gap-1"
+            class="h-14  px-5 py-2.5 left-[10px] top-[7px] absolute bg-zinc-500 rounded-[32px] inline-flex justify-center items-center gap-1"
           >
             <div
-              class="justify-start text-white text-xl font-normal font-['Epilogue'] leading-tight"
+              class="justify-start w-full text-white text-xl font-normal font-['Epilogue'] leading-tight"
             >
               Arraste
             </div>
-            <div class="w-6 h-6 relative overflow-hidden">
-              <div
-                class="w-2 h-4 left-[8.25px] top-[3.75px] absolute bg-white"
-              ></div>
-            </div>
+              <i class="ph ph-hand-swipe-left text-2xl text-white ms-1"></i>
           </div>
         </div>
       </div>
@@ -145,59 +141,50 @@
         <div
           class="flex-1 self-stretch px-5 py-2 bg-white rounded-tl-sm inline-flex flex-col justify-center items-center gap-1.5"
         >
-          <div class="w-7 h-7 relative overflow-hidden">
-            <div
-              class="w-7 h-6 left-[0.94px] top-[2.81px] absolute bg-black"
-            ></div>
+          <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
+            <i class="ph ph-house text-2xl"></i>  
           </div>
           <a href="home.html"
             class="justify-start text-black text-sm font-medium font-['Epilogue']"
           >
-            Inicio
-          </a>
+          Inicio
+        </a>
         </div>
         <div
           class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
         >
-          <div class="w-7 h-7 relative overflow-hidden">
-            <div
-              class="w-6 h-6 left-[3.75px] top-[1.88px] absolute bg-black"
-            ></div>
+          <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
+            <i class="ph ph-barbell text-2xl"></i>
           </div>
-          <div
+          <a href="#"
             class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
           >
             Atividades
-          </div>
+        </a>
         </div>
         <div
           class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
         >
-          <div class="w-7 h-7 relative overflow-hidden">
-            <div
-              class="w-6 h-6 left-[3.75px] top-[1.88px] absolute bg-black"
-            ></div>
+          <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
+            <i class="ph ph-person-arms-spread text-2xl"></i>
           </div>
-          <div
+          <a href="#"
             class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
           >
             Relax
-          </div>
+        </a>
         </div>
         <div
           class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
         >
           <div class="w-7 h-7 relative overflow-hidden">
-            <div
-              class="w-6 h-6 left-[2.81px] top-[2.81px] absolute bg-black"
-            ></div>
+            <i class="ph ph-ambulance text-2xl"></i>
           </div>
           <a href="sos.html"
             class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
           >
             Emergência
-          </a>
-        </div>
+        </a>
       </div>
     </div>
   </body>
