--- a/suport.html
+++ b/suport.html
@@ -113,11 +113,7 @@
                 >
                   Conectar com relogio
                 </div>
-                <div class="w-6 h-6 relative overflow-hidden">
-                  <div
-                    class="w-5 h-5 left-[2.25px] top-[2.25px] absolute bg-black"
-                  ></div>
-                </div>
+                <i class="ph ph-plugs text-2xl"></i>
               </div>
               <div class="w-6 h-6 relative overflow-hidden">
                 <div
@@ -201,11 +197,7 @@
           >
             Sair do aplicativo
           </a>
-          <div class="w-4 h-4 relative overflow-hidden">
-            <div
-              class="w-2 h-2 left-[3.50px] top-[3.50px] absolute bg-white"
-            ></div>
-          </div>
+          <i class="ph ph-sign-out text-2xl text-white"></i>
         </div>
       </div>
     </div>
