--- a/home.html
+++ b/home.html
@@ -270,24 +270,20 @@
         <div
           class="flex-1 self-stretch px-5 py-2 bg-white rounded-tl-sm inline-flex flex-col justify-center items-center gap-1.5"
         >
-          <div class="w-7 h-7 relative overflow-hidden">
-            <div
-              class="w-7 h-6 left-[0.94px] top-[2.81px] absolute bg-black"
-            ></div>
+          <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
+            <i class="ph ph-house text-2xl"></i>  
           </div>
           <a href="home.html"
             class="justify-start text-black text-sm font-medium font-['Epilogue']"
           >
-            Inicio
+          Inicio
         </a>
         </div>
         <div
           class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
         >
-          <div class="w-7 h-7 relative overflow-hidden">
-            <div
-              class="w-6 h-6 left-[3.75px] top-[1.88px] absolute bg-black"
-            ></div>
+          <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
+            <i class="ph ph-barbell text-2xl"></i>
           </div>
           <a href="#"
             class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
@@ -298,10 +294,8 @@
         <div
           class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
         >
-          <div class="w-7 h-7 relative overflow-hidden">
-            <div
-              class="w-6 h-6 left-[3.75px] top-[1.88px] absolute bg-black"
-            ></div>
+          <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
+            <i class="ph ph-person-arms-spread text-2xl"></i>
           </div>
           <a href="#"
             class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
@@ -313,16 +307,13 @@
           class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
         >
           <div class="w-7 h-7 relative overflow-hidden">
-            <div
-              class="w-6 h-6 left-[2.81px] top-[2.81px] absolute bg-black"
-            ></div>
+            <i class="ph ph-ambulance text-2xl"></i>
           </div>
           <a href="sos.html"
             class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
           >
             Emergência
         </a>
-        </div>
       </div>
     </div>
   </body>
