--- a/family-form.html
+++ b/family-form.html
@@ -91,20 +91,14 @@
                 </div>
               </div>
               <div
-                class="self-stretch px-5 py-4 relative rounded-2xl outline outline-1 outline-offset-[-1px] outline-zinc-300 inline-flex justify-start items-center"
+                class="self-stretch px-5 py-4 relative rounded-2xl outline outline-1 outline-offset-[-1px] outline-zinc-300 inline-flex justify-between items-center"
               >
                 <div
                   class="justify-start text-neutral-400 text-base font-normal font-['Epilogue']"
                 >
                   John Doe
                 </div>
-                <div
-                  class="w-6 h-6 left-[320px] top-[14px] absolute overflow-hidden"
-                >
-                  <div
-                    class="w-6 h-3.5 left-[0.75px] top-[4.50px] absolute bg-neutral-400"
-                  ></div>
-                </div>
+                <i class="ph ph-user text-zinc-300 text-2xl "></i>
               </div>
             </div>
             <div
@@ -124,20 +118,14 @@
                 </div>
               </div>
               <div
-                class="self-stretch px-5 py-4 relative rounded-2xl outline outline-1 outline-offset-[-1px] outline-zinc-300 inline-flex justify-start items-center"
+                class="self-stretch px-5 py-4 relative rounded-2xl outline outline-1 outline-offset-[-1px] outline-zinc-300 inline-flex justify-between items-center"
               >
                 <div
                   class="justify-start text-neutral-400 text-base font-normal font-['Epilogue']"
                 >
                   01/01/1999
                 </div>
-                <div
-                  class="w-6 h-6 left-[320px] top-[14px] absolute overflow-hidden"
-                >
-                  <div
-                    class="w-6 h-3.5 left-[0.75px] top-[4.50px] absolute bg-neutral-400"
-                  ></div>
-                </div>
+                <i class="ph ph-calendar-blank text-zinc-300 text-2xl "></i>
               </div>
             </div>
             <div
@@ -157,20 +145,14 @@
                 </div>
               </div>
               <div
-                class="self-stretch px-5 py-4 relative rounded-2xl outline outline-1 outline-offset-[-1px] outline-zinc-300 inline-flex justify-start items-center"
+                class="self-stretch px-5 py-4 relative rounded-2xl outline outline-1 outline-offset-[-1px] outline-zinc-300 inline-flex justify-between items-center"
               >
                 <div
                   class="justify-start text-neutral-400 text-base font-normal font-['Epilogue']"
                 >
                   Masculino
                 </div>
-                <div
-                  class="w-6 h-6 left-[320px] top-[14px] absolute overflow-hidden"
-                >
-                  <div
-                    class="w-4 h-2 left-[3.75px] top-[8.25px] absolute bg-black"
-                  ></div>
-                </div>
+                <i class="ph ph-gender-male text-2xl text-zinc-300"></i>
               </div>
             </div>
             <div
