--- a/family-form.html
+++ b/family-form.html
@@ -98,7 +98,7 @@
                 >
                   John Doe
                 </div>
-                <i class="ph ph-user text-zinc-300 text-2xl "></i>
+                <i class="ph ph-eye text-zinc-300 text-2xl "></i>
               </div>
             </div>
             <div
@@ -125,7 +125,7 @@
                 >
                   01/01/1999
                 </div>
-                <i class="ph ph-calendar-blank text-zinc-300 text-2xl "></i>
+                <i class="ph ph-eye text-zinc-300 text-2xl "></i>
               </div>
             </div>
             <div
@@ -152,7 +152,7 @@
                 >
                   Masculino
                 </div>
-                <i class="ph ph-gender-male text-2xl text-zinc-300"></i>
+                <i class="ph ph-caret-down text-2xl text-zinc-300"></i>
               </div>
             </div>
             <div
