--- a/suport.html
+++ b/suport.html
@@ -32,38 +32,14 @@
       >
         <div class="self-stretch inline-flex justify-between items-center">
           <div class="p-2.5 flex justify-center items-center gap-2.5">
-            <div class="w-6 h-6 relative overflow-hidden">
-              <div
-                class="w-3 h-3 left-[6px] top-[6px] absolute outline outline-2 outline-offset-[-1px] outline-stone-900"
-              ></div>
-              <div
-                class="w-3 h-3 left-[6px] top-[6px] absolute outline outline-2 outline-offset-[-1px] outline-stone-900"
-              ></div>
-            </div>
+            <i class="ph ph-x text-2xl"></i>
           </div>
           <div class="flex justify-start items-start gap-2.5">
             <div class="p-2.5 flex justify-center items-center gap-2.5">
-              <div class="w-6 h-6 relative overflow-hidden">
-                <div
-                  class="w-5 h-5 left-[2px] top-[2px] absolute outline outline-2 outline-offset-[-1px] outline-stone-900"
-                ></div>
-                <div
-                  class="w-1.5 h-1.5 left-[9.09px] top-[7px] absolute outline outline-2 outline-offset-[-1px] outline-stone-900"
-                ></div>
-                <div
-                  class="w-[0.01px] h-0 left-[12px] top-[17px] absolute outline outline-2 outline-offset-[-1px] outline-stone-900"
-                ></div>
-              </div>
+              <i class="ph ph-question text-2xl"></i>
             </div>
             <div class="p-2.5 flex justify-center items-center gap-2.5">
-              <div class="w-6 h-6 relative overflow-hidden">
-                <div
-                  class="w-4 h-3.5 left-[3px] top-[2px] absolute outline outline-2 outline-offset-[-1px] outline-stone-900"
-                ></div>
-                <div
-                  class="w-[3.46px] h-px left-[10.27px] top-[21px] absolute outline outline-2 outline-offset-[-1px] outline-stone-900"
-                ></div>
-              </div>
+              <i class="ph ph-bell text-2xl"></i>
             </div>
           </div>
         </div>
@@ -113,12 +89,10 @@
                 >
                   Conectar com relogio
                 </div>
-                <i class="ph ph-plugs text-2xl"></i>
+                <i class="ph ph-clock text-xl"></i>
               </div>
               <div class="w-6 h-6 relative overflow-hidden">
-                <div
-                  class="w-1.5 h-3 left-[9px] top-[6px] absolute outline outline-2 outline-offset-[-1px] outline-stone-900"
-                ></div>
+                <i class="ph ph-caret-right"></i>
               </div>
             </div>
             <div
@@ -129,17 +103,11 @@
                   class="justify-center text-stone-900 text-xl font-normal font-['Epilogue']"
                 >
                   Falar com o atendente
-                </div>
-                <div class="w-6 h-6 relative overflow-hidden">
-                  <div
-                    class="w-5 h-5 left-[3px] top-[2.25px] absolute bg-stone-900"
-                  ></div>
+                  <i class="ph ph-chat-circle text-xl"></i>
                 </div>
               </div>
               <div class="w-6 h-6 relative overflow-hidden">
-                <div
-                  class="w-1.5 h-3 left-[9px] top-[6px] absolute outline outline-2 outline-offset-[-1px] outline-stone-900"
-                ></div>
+                <i class="ph ph-caret-right"></i>
               </div>
             </div>
             <div
@@ -150,17 +118,11 @@
                   class="justify-center text-stone-900 text-xl font-normal font-['Epilogue']"
                 >
                   Enviar uma sugestão
-                </div>
-                <div class="w-6 h-6 relative overflow-hidden">
-                  <div
-                    class="w-4 h-5 left-[3.75px] top-[1.50px] absolute bg-stone-900"
-                  ></div>
+                  <i class="ph ph-lightbulb"></i>
                 </div>
               </div>
               <div class="w-6 h-6 relative overflow-hidden">
-                <div
-                  class="w-1.5 h-3 left-[9px] top-[6px] absolute outline outline-2 outline-offset-[-1px] outline-stone-900"
-                ></div>
+                <i class="ph ph-caret-right"></i>
               </div>
             </div>
             <div
@@ -172,19 +134,10 @@
                 >
                   Configurar
                 </a>
-                <div class="w-6 h-6 relative overflow-hidden">
-                  <div
-                    class="w-1.5 h-1.5 left-[9px] top-[9px] absolute outline outline-2 outline-offset-[-1px] outline-stone-900"
-                  ></div>
-                  <div
-                    class="w-5 h-5 left-[1px] top-[1px] absolute outline outline-2 outline-offset-[-1px] outline-stone-900"
-                  ></div>
+                <i class="ph ph-gear text-xl"></i>
                 </div>
-              </div>
               <div class="w-6 h-6 relative overflow-hidden">
-                <div
-                  class="w-1.5 h-3 left-[9px] top-[6px] absolute outline outline-2 outline-offset-[-1px] outline-stone-900"
-                ></div>
+                <i class="ph ph-caret-right"></i>
               </div>
             </div>
           </div>
