--- a/family.html
+++ b/family.html
@@ -64,15 +64,13 @@
             class="self-stretch flex flex-col justify-center items-start gap-3.5"
           >
             <div class="inline-flex justify-start items-start gap-3.5">
-              <div class="w-16 h-16 relative rounded-2xl overflow-hidden">
-                <div
-                  class="w-20 h-20 left-0 top-0 absolute bg-black bg-opacity-10 border-[0.73px] border-zinc-300"
-                ></div>
-                <div
-                  class="w-7 h-9 left-[21px] top-[17px] absolute justify-start text-black text-5xl font-medium font-['Epilogue']"
+                <div class="w-16 h-16 relative rounded-2xl overflow-hidden bg-black flex items-center justify-center">
+                  <p
+                  class="text-white text-center text-5xl font-medium font-['Epilogue']"
                 >
                   A
-                </div>
+                </p>
+      
               </div>
               <div class="w-40 inline-flex flex-col justify-start items-start">
                 <div
@@ -231,54 +229,54 @@
         <div
         class="self-stretch bg-white rounded-tl-sm rounded-tr-sm border-t border-zinc-100 inline-flex justify-start items-start"
       >
-        <div
-          class="flex-1 self-stretch px-5 py-2 bg-white rounded-tl-sm inline-flex flex-col justify-center items-center gap-1.5"
-        >
-          <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
-            <i class="ph ph-house text-2xl"></i>  
-          </div>
-          <a href="home.html"
-            class="justify-start text-black text-sm font-medium font-['Epilogue']"
-          >
-          Inicio
-        </a>
-        </div>
-        <div
-          class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
-        >
-          <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
-            <i class="ph ph-barbell text-2xl"></i>
-          </div>
-          <a href="#"
-            class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
-          >
-            Atividades
-        </a>
-        </div>
-        <div
-          class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
-        >
-          <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
-            <i class="ph ph-person-arms-spread text-2xl"></i>
-          </div>
-          <a href="#"
-            class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
-          >
-            Relax
-        </a>
-        </div>
-        <div
-          class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
-        >
-          <div class="w-7 h-7 relative overflow-hidden">
-            <i class="ph ph-ambulance text-2xl"></i>
-          </div>
-          <a href="sos.html"
-            class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
-          >
-            Emergência
-        </a>
+      <div
+      class="flex-1 self-stretch px-5 py-2 bg-white rounded-tl-sm inline-flex flex-col justify-center items-center gap-1.5"
+    >
+      <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
+        <i class="ph ph-house text-2xl"></i>  
       </div>
+      <a href="home.html"
+        class="justify-start text-black text-sm font-medium font-['Epilogue']"
+      >
+      Inicio
+    </a>
+    </div>
+    <div
+      class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
+    >
+      <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
+        <i class="ph ph-calendar text-2xl"></i>
+      </div>
+      <a href="#"
+        class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
+      >
+        Atividades
+    </a>
+    </div>
+    <div
+      class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
+    >
+      <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
+        <i class="ph ph-person-simple-tai-chi text-2xl"></i>
+      </div>
+      <a href="#"
+        class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
+      >
+        Relax
+    </a>
+    </div>
+    <div
+      class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
+    >
+      <div class="w-7 h-7 relative overflow-hidden">
+        <i class="ph ph-first-aid text-2xl"></i>
+      </div>
+      <a href="sos.html"
+        class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
+      >
+        Emergência
+    </a>
+  </div>
       </div>
     </div>
   </body>
