--- a/home.html
+++ b/home.html
@@ -90,15 +90,13 @@
           </div>
         </div>
         <div class="inline-flex justify-start items-center gap-3.5">
-          <div class="w-16 h-16 relative rounded-2xl overflow-hidden">
-            <div
-              class="w-20 h-20 left-0 top-0 absolute bg-black bg-opacity-10 border-[0.73px] border-zinc-300"
-            ></div>
-            <div
-              class="w-7 h-9 left-[21px] top-[17px] absolute justify-start text-black text-5xl font-medium font-['Epilogue']"
-            >
-              A
-            </div>
+          <div class="w-16 h-16 relative rounded-2xl overflow-hidden bg-black flex items-center justify-center">
+            <p
+            class="text-white text-center text-5xl font-medium font-['Epilogue']"
+          >
+            A
+          </p>
+
           </div>
           <a href="family.html"
             class="justify-start text-black text-2xl font-medium font-['Epilogue']"
@@ -283,7 +281,7 @@
           class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
         >
           <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
-            <i class="ph ph-barbell text-2xl"></i>
+            <i class="ph ph-calendar text-2xl"></i>
           </div>
           <a href="#"
             class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
@@ -295,7 +293,7 @@
           class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
         >
           <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
-            <i class="ph ph-person-arms-spread text-2xl"></i>
+            <i class="ph ph-person-simple-tai-chi text-2xl"></i>
           </div>
           <a href="#"
             class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
@@ -307,7 +305,7 @@
           class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
         >
           <div class="w-7 h-7 relative overflow-hidden">
-            <i class="ph ph-ambulance text-2xl"></i>
+            <i class="ph ph-first-aid text-2xl"></i>
           </div>
           <a href="sos.html"
             class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
