--- a/sos.html
+++ b/sos.html
@@ -138,54 +138,54 @@
       <div
         class="self-stretch bg-white rounded-tl-sm rounded-tr-sm border-t border-zinc-100 inline-flex justify-start items-start"
       >
-        <div
-          class="flex-1 self-stretch px-5 py-2 bg-white rounded-tl-sm inline-flex flex-col justify-center items-center gap-1.5"
-        >
-          <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
-            <i class="ph ph-house text-2xl"></i>  
-          </div>
-          <a href="home.html"
-            class="justify-start text-black text-sm font-medium font-['Epilogue']"
-          >
-          Inicio
-        </a>
-        </div>
-        <div
-          class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
-        >
-          <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
-            <i class="ph ph-barbell text-2xl"></i>
-          </div>
-          <a href="#"
-            class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
-          >
-            Atividades
-        </a>
-        </div>
-        <div
-          class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
-        >
-          <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
-            <i class="ph ph-person-arms-spread text-2xl"></i>
-          </div>
-          <a href="#"
-            class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
-          >
-            Relax
-        </a>
-        </div>
-        <div
-          class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
-        >
-          <div class="w-7 h-7 relative overflow-hidden">
-            <i class="ph ph-ambulance text-2xl"></i>
-          </div>
-          <a href="sos.html"
-            class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
-          >
-            Emergência
-        </a>
+      <div
+      class="flex-1 self-stretch px-5 py-2 bg-white rounded-tl-sm inline-flex flex-col justify-center items-center gap-1.5"
+    >
+      <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
+        <i class="ph ph-house text-2xl"></i>  
       </div>
+      <a href="home.html"
+        class="justify-start text-black text-sm font-medium font-['Epilogue']"
+      >
+      Inicio
+    </a>
+    </div>
+    <div
+      class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
+    >
+      <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
+        <i class="ph ph-calendar text-2xl"></i>
+      </div>
+      <a href="#"
+        class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
+      >
+        Atividades
+    </a>
+    </div>
+    <div
+      class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
+    >
+      <div class="w-7 h-7 relative overflow-hidden inline-flex justify-center items-center">
+        <i class="ph ph-person-simple-tai-chi text-2xl"></i>
+      </div>
+      <a href="#"
+        class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
+      >
+        Relax
+    </a>
+    </div>
+    <div
+      class="flex-1 px-5 py-2 bg-white inline-flex flex-col justify-center items-center gap-1.5"
+    >
+      <div class="w-7 h-7 relative overflow-hidden">
+        <i class="ph ph-first-aid text-2xl"></i>
+      </div>
+      <a href="sos.html"
+        class="justify-start text-stone-900 text-sm font-medium font-['Epilogue']"
+      >
+        Emergência
+    </a>
+  </div>
     </div>
   </body>
 </html>
